--- a/book/Course files/Notebook 6/NB6_ex.ipynb
+++ b/book/Course files/Notebook 6/NB6_ex.ipynb
@@ -66,8 +66,9 @@
    "source": [
     "**`Exercise 6.1*`** \\\n",
     "You probably know the `np.mean` and the `np.std` commands. However you can also do them yourself using the definitions:\n",
+    "    \n",
     "$$\n",
-    "\\overline{x} = \\frac{1}{N} \\sum_{i=1}^N x_i\n",
+    "\\mu_x = \\overline{x} = \\frac{1}{N} \\sum_{i=1}^N x_i\n",
     "$$\n",
     "    \n",
     "$$\n",
@@ -293,7 +294,7 @@
     "  \n",
     "In general, a probability density $p(x)$ is a function that has the property that the probabilty that a random variable $X$ has a value smaller than $x$ is given by: \n",
     "\n",
-    "$$\\mathbb{P}[X<x] = \\int_{-\\infty}^{x}p(\\tilde{x}) d \\tilde{x}$$  \n",
+    "$$\\mathbb{P}[X<x] = \\int_{-\\infty}^{x}p(\\tilde{x}) d \\tilde{x}$$\n",
     "\n",
     "The normal distribution is sometimes called a Gaussian distribution, and its density function is sometimes called a Bell curve. Unfortunately, it is not possible to analytically solve the integral of the density of the normal distribution. Luckily, good numerical approximations of this integral, that is also called the errorfunction $Erf(x,\\mu, \\sigma)$, exist. In python you can use scipy.stats.norm.pdf for the probabilty density function, and scipy.stats.norm.cdf for the error function. [https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.norm.html].\n",
     "\n"
