--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -345,15 +345,21 @@
     "\n",
     "Because measured values can fluctuate, the average of a series of repeated measurements ($x_i$) provides the best possible approximation of the actual value. The average value is calculated based on the series of repeated measurements:\n",
     "\n",
-    "$$\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i$$ (eq:gem)\n",
+    "$$\n",
+    "\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
+    "$$ (eq:gem)\n",
     "\n",
     "Of course, a repeated measurement only makes sense if your instrument is accurate enough to show variations. There is a degree of dispersion in the series of measurements: the measurements differ from each other. The standard deviation is a measure of that dispersion:\n",
     "\n",
-    "$$\\sigma(x) = \\sqrt{\\frac{\\sum_{i=1}^N (x_i-\\overline{x})^2}{N-1}}$$ (eq:stdev)\n",
+    "$$\n",
+    "\\sigma(x) = \\sqrt{\\frac{\\sum_{i=1}^N (x_i-\\overline{x})^2}{N-1}}\n",
+    "$$ (eq:stdev)\n",
     "\n",
     "Although the mean and standard deviation are better defined with more measurements, the standard deviation does not decrease in value, see {numref}`Figure {number} <fig:MO:noisegen>`. The spread itself is therefore not a good measure of the uncertainty in your mean value. The uncertainty in your mean is given by:\n",
     "\n",
-    "$$u(x) = \\frac{\\sigma(x)} {\\sqrt{N}}$$ (eq:unc)\n",
+    "$$\n",
+    "u(x) = \\frac{\\sigma(x)} {\\sqrt{N}}\n",
+    "$$ (eq:unc)\n",
     "\n",
     "An important insight is that the measurement uncertainty decreases with the square root of the number of measurements. To reduce the measurement uncertainty based on multiple measurements by a factor of 10, you need to perform 100 times as many repeated measurements. The optimum number of repeated measurements therefore depends on (1) the accuracy you want to achieve, and (2) the time and money you have available to achieve that accuracy.\n",
     "\n",
@@ -413,15 +419,21 @@
     "### Weighted average\n",
     "It may happen that not all repeated measurements are equally reliable. If measurement 1 has half the uncertainty of measurement 2, then it seems logical that the average is calculated by $\\frac{2 \\cdot x_1 + 1 \\cdot x_2}{3}$. We then refer to this as a weighted average. The question is, of course, how to determine the reliability and how to arrive at our weighting factor. Fortunately, we have just found a measure for this, namely the measurement uncertainty. The weighting factor is defined by:\n",
     "\n",
-    "$$w_i = \\frac{1}{u(x_i)^2}$$ (eq:weegfactor)\n",
+    "$$\n",
+    "w_i = \\frac{1}{u(x_i)^2}\n",
+    "$$ (eq:weegfactor)\n",
     "\n",
     "The weighted average becomes:\n",
     "\n",
-    "$$\\overline{x} = \\frac{w_1 x_1 + w_2 x_2 + w_3 x_3 + ... + w_n x_n}{w_1 + w_2 + w_3 + ... + w_n} = \\frac{\\sum_{i=1}^{N} w_i x_i}{\\sum_{i=1}^{N} w_i}.$$ (eq:gewogengemiddelde)\n",
+    "$$\n",
+    "\\overline{x} = \\frac{w_1 x_1 + w_2 x_2 + w_3 x_3 + ... + w_n x_n}{w_1 + w_2 + w_3 + ... + w_n} = \\frac{\\sum_{i=1}^{N} w_i x_i}{\\sum_{i=1}^{N} w_i}.\n",
+    "$$ (eq:gewogengemiddelde)\n",
     "\n",
     "with an associated uncertainty of:\n",
     "\n",
-    "$$u(x) = \\sqrt{\\frac{1}{\\sum_i^N{w_i}}}$$ (eq:unc_gewogengemiddelde)\n",
+    "$$\n",
+    "u(x) = \\sqrt{\\frac{1}{\\sum_i^N{w_i}}}\n",
+    "$$ (eq:unc_gewogengemiddelde)\n",
     "\n",
     "Note that the above formula reduces to the *normal* mean if all weighting factors $w_i$ are equal to 1.\n",
     "\n",
@@ -458,20 +470,26 @@
     "\n",
     "As indicated, there is variation in repeated measurements. We can view the physical measurement $M$ as the sum of the physical value $G$ and noise $s$:\n",
     "\n",
-    "$$M = G + s$$ (eq:MGs)\n",
+    "$$\n",
+    "M = G + s\n",
+    "$$ (eq:MGs)\n",
     "\n",
     "Noise is broadly defined here; we understand it to mean all possible errors. We are particularly interested in random errors. These are normally distributed.\n",
     "\n",
     "### Gaussian distribution\n",
     "When dealing with random noise, the probability of a value occurring can be described using a normal (Gaussian) distribution:\n",
     "\n",
-    "$$ P(x) = \\frac{1}{{\\sigma \\sqrt{2\\pi}}}e^{\\frac{{-(x - \\mu)^2}}{{2\\sigma^2}}} $$ (eq:Gauss)\n",
+    "$$ \n",
+    "P(x) = \\frac{1}{{\\sigma \\sqrt{2\\pi}}}e^{\\frac{{-(x - \\mu)^2}}{{2\\sigma^2}}} \n",
+    "$$ (eq:Gauss)\n",
     "\n",
     "Here, $P(x)$ is the probability density function, with $\\mu$ being the mean value of the noise and $\\sigma$ being the standard deviation.\n",
     "\n",
     "An example of a noise signal is shown in {numref}`Figure {number} <fig:MO:noise>` (the corresponding code is shown in a cell below). The mean of these values is 0. Repeating measurements therefore limits the influence of the noise because the mean contribution is 0:\n",
     "\n",
-    "$$\\overline{M} = \\frac{\\sum_{i=1}^{N} (G + s)}{N} = \\frac{\\sum_{i=1}^{N} G + \\sum_{i=1}^{N} s}{N} = \\frac{\\sum_{i=1}^{N} G}{N} = \\overline{G}$$ (eq:MisG)\n",
+    "$$\n",
+    "\\overline{M} = \\frac{\\sum_{i=1}^{N} (G + s)}{N} = \\frac{\\sum_{i=1}^{N} G + \\sum_{i=1}^{N} s}{N} = \\frac{\\sum_{i=1}^{N} G}{N} = \\overline{G}\n",
+    "$$ (eq:MisG)\n",
     "\n"
    ]
   },
@@ -665,7 +683,9 @@
     "\n",
     "The probability of $k$ events within a certain time with an average of $\\lambda$ is given by:\n",
     "\n",
-    "$$ P(X = k) = \\frac{\\lambda^k e^{-\\lambda}}{k!}. $$ (eq:Poisson)\n",
+    "$$\n",
+    "P(X = k) = \\frac{\\lambda^k e^{-\\lambda}}{k!}. \n",
+    "$$ (eq:Poisson)\n",
     "\n",
     "The standard deviation in a Poisson distribution is equal to the square root of the mean ($\\sigma = \\sqrt{\\lambda}$).\n",
     "\n",
@@ -705,17 +725,23 @@
     "\n",
     "The expected value is simply being calculated by: \n",
     "\n",
-    "$$ \\mu = \\frac{a+b}{2} $$ (eq:uni_gem)\n",
+    "$$\n",
+    "\\mu = \\frac{a+b}{2} \n",
+    "$$ (eq:uni_gem)\n",
     "\n",
     "and its standard deviation by: \n",
     "\n",
-    "$$ \\sigma = \\sqrt{\\frac{(b-a)^2}{12}} $$ (eq:uni_std)\n",
+    "$$\n",
+    "\\sigma = \\sqrt{\\frac{(b-a)^2}{12}} \n",
+    "$$ (eq:uni_std)\n",
     "\n",
     "\n",
     "#### Monte Carlo simulation\n",
     "Such a uniform distribution is useful in Monte Carlo simulations, for example. In such a simulation, a large number of random points are generated and then examined to see where they end up. For an integral that cannot be solved analytically, you can still calculate the surface area: \n",
     "\n",
-    "$$ \\int_{a}^{b} f(x) dx = \\frac{N}{N_{totaal}} \\cdot (b-a) \\cdot (y_{max} - y_{min}) $$ (eq:unif)\n",
+    "$$\n",
+    "\\int_{a}^{b} f(x) dx = \\frac{N}{N_{totaal}} \\cdot (b-a) \\cdot (y_{max} - y_{min}) \n",
+    "$$ (eq:unif)\n",
     "\n",
     "Here, $y_{min}$ and $y_{max}$ are the vertical limits you choose for creating your random points. Of course, these must cover the entire graph!\n",
     "\n",
@@ -736,11 +762,15 @@
     "\n",
     "In more detail, this means that you first calculate the mean and standard deviation of your data, *including* the suspicious point. You can then omit a point if it satisfies the following inequality: \n",
     "\n",
-    "$$ N\\cdot P_{out} < 0.5 $$ (eq:criterium)\n",
+    "$$\n",
+    "N\\cdot P_{out} < 0.5 \n",
+    "$$ (eq:criterium)\n",
     "\n",
     "where\n",
     "\n",
-    "$$P_{out}=2Erf(x_{out},\\overline{x},\\sigma)$$ (eq:chauvenet)\n",
+    "$$\n",
+    "P_{out}=2Erf(x_{out},\\overline{x},\\sigma)\n",
+    "$$ (eq:chauvenet)\n",
     "\n",
     "Here, erf is the error function, the integral of the normal distribution. The result of this integral cannot be calculated algebraically. You can calculate the value for the error function at <https://www.danielsoper.com/statcalc/calculator.aspx?id=53>. Below, we explain how to do this in Python.\n",
     "\n",
@@ -920,11 +950,15 @@
     "With the functional approach, you look at the difference when you evaluate the function at the point that is one uncertainty away from your measuring point. In formula form, this becomes:\n",
     "\n",
     "\n",
-    "$$u(Z) = \\frac{Z(\\overline{x}+u(x)) - Z(\\overline{x} - u(x))}{2}$$ (eq:func)\n",
+    "$$\n",
+    "u(Z) = \\frac{Z(\\overline{x}+u(x)) - Z(\\overline{x} - u(x))}{2}\n",
+    "$$ (eq:func)\n",
     "\n",
     "In many cases, symmetry applies, which means that the above equation can also be interpreted as:\n",
     "\n",
-    "$$u(Z) = Z(\\overline{x}+u(x)) - Z(\\overline{x})$$ (eq:func_eenvoudig)\n",
+    "$$\n",
+    "u(Z) = Z(\\overline{x}+u(x)) - Z(\\overline{x})\n",
+    "$$ (eq:func_eenvoudig)\n",
     "\n",
     "\n",
     "```{admonition} Example: \n",
@@ -970,7 +1004,9 @@
     "### Calculus approach\n",
     "In the calculus method, you use partial derivatives to linearize the effect of an error:\n",
     "\n",
-    "$$u(Z) = |\\frac{\\partial Z}{\\partial x}|u(x)$$ (eq:calc)\n",
+    "$$\n",
+    "u(Z) = |\\frac{\\partial Z}{\\partial x}|u(x)\n",
+    "$$ (eq:calc)\n",
     "\n",
     "A consequence of the linear approach to the error is that this method becomes less accurate as the error increases or the function exhibits strongly non-linear behavior.\n",
     "\n",
@@ -995,7 +1031,9 @@
     "### Multiple variables\n",
     "If your result is a function of multiple independent variables, you add the errors quadratically:\n",
     "\n",
-    "$$u(f(x_1,x_2,\\dotsc,x_n))^2 = \\sum_{i=1}^n \\left(\\frac{\\partial f(\\vec{x})}{\\partial x_i}u(x_i)\\right)^2$$ (eq:err_prop)\n",
+    "$$\n",
+    "u(f(x_1,x_2,\\dotsc,x_n))^2 = \\sum_{i=1}^n \\left(\\frac{\\partial f(\\vec{x})}{\\partial x_i}u(x_i)\\right)^2\n",
+    "$$ (eq:err_prop)\n",
     "\n",
     "Using the calculus method, it can be deduced that the uncertainty $u(f)$ applies to a function $f(y,x)=cy^nx^m$:\n",
     "\n",
@@ -1212,17 +1250,23 @@
     "\n",
     "Fitting is a procedure that attempts to find a mathematical relationship in a number of (measurement) points. We are then looking for a relationship $F(x)$ that describes the measurement points $M(x)$ in such a way that:\n",
     "\n",
-    "$$F(x) - M(x)\\approx 0$$ (eq:resid)\n",
+    "$$\n",
+    "F(x) - M(x)\\approx 0\n",
+    "$$ (eq:resid)\n",
     "\n",
     "First, you need to choose a type of relationship. Examples include a linear fit, a polynomial, sine, etc. In the fitting procedure itself, the parameters of this relationship are chosen so that they best match the data. For example, if a second-order polynomial is being fitted, you look for the combination of $a$, $b$, and $c$ that ensures that the curve $a + bx + cx^2$ fits your measurement points as closely as possible.\n",
     "\n",
     "A commonly used method for determining the *goodness* of a fit is the *least-squares* method. In this method, the sum of the squared distances from the measurement points to the fit is minimized. To do this, we first define the distance between the measurement point and the fit:\n",
     "\n",
-    "$$R_i = M_i - F_i$$ (eq:resid2)\n",
+    "$$\n",
+    "R_i = M_i - F_i\n",
+    "$$ (eq:resid2)\n",
     "\n",
     "This distance is also referred to as the residue, which we will discuss in more detail later. The total sum of the absolute distances must be as small as possible:\n",
     "\n",
-    "$$\\chi^2=\\sum R_i^2$$ (eq:chi2a)\n",
+    "$$\n",
+    "\\chi^2=\\sum R_i^2\n",
+    "$$ (eq:chi2a)\n",
     "\n",
     "```{figure} Figures/least_squar_fit.png\n",
     "---\n",
@@ -1245,7 +1289,9 @@
     "\n",
     "For a weighted fit, the smallest value for $\\chi^2$ is considered, taking the uncertainty into account:\n",
     "\n",
-    "$$\\chi^2 = \\sum \\frac{(M_i-F_i)^2 }{u(M_i)^2} $$ (eq:chi2)\n",
+    "$$\n",
+    "\\chi^2 = \\sum \\frac{(M_i-F_i)^2 }{u(M_i)^2} \n",
+    "$$ (eq:chi2)\n",
     "\n",
     "\n",
     "### Other fit types\n",
@@ -1279,7 +1325,9 @@
     "\n",
     "In one of the previous sections, we discussed that a physical measurement ($M(x)$) can be described as the sum of the physical value ($G(x)$) + noise ($s$). A function fit ($F(x)$) is performed based on the measurements. To check that we have a good fit, we need to look at the noise. We would get this if we subtract the fit function from the measurement: \n",
     "\n",
-    "$$ R = M(x) - F(x) \\stackrel{?}{=} s $$ (eq:residuals)\n",
+    "$$\n",
+    "R = M(x) - F(x) \\stackrel{?}{=} s \n",
+    "$$ (eq:residuals)\n",
     "\n",
     "The initial analysis is performed by plotting the noise $s$ as a function of the independent variable $x$. If there is a pattern in this, for example a rising line, a sinusoidal signal, or all noise points above 0, see {numref}`Figure {number} <fig:MO:three_graphs>`, then there is a good chance that a better function $F(x)$ can be found that describes the physical value $G(x)$.\n",
     "\n",
@@ -1331,7 +1379,9 @@
     "Suppose we want to compare two values $a$ and $b$, each with their own uncertainty $u(a)$ and $u(b)$. Then we first want to look at the\n",
     "difference between these two values: $v = a- b$. Based on the calculus approach, the uncertainty in $v$ is given by $u(v) = \\sqrt{u(a)^2 + u(b)^2}$. The agreement now is that two values are inconsistent with each other (in a scientific sense, they do not correspond sufficiently with each other) if the following applies:\n",
     "\n",
-    "$$\\lvert v \\rvert = \\lvert a - b \\rvert > 2\\sqrt{u(a)^2 + u(b)^2} = 2u(v)$$ (eq:agreement)\n",
+    "$$\n",
+    "\\lvert v \\rvert = \\lvert a - b \\rvert > 2\\sqrt{u(a)^2 + u(b)^2} = 2u(v)\n",
+    "$$ (eq:agreement)\n",
     "\n",
     "When determining physical constants, the uncertainty is often so small that it is negligible compared to other uncertainties. Please note! You could argue that if your measurement uncertainty is large enough, the values will never be contradictory. However, when the uncertainty is relatively large compared to the determined value, the values found have little scientific value.\n",
     "\n",
