--- a/book/Course files/Notebook 6/Notebook MU.ipynb
+++ b/book/Course files/Notebook 6/Notebook MU.ipynb
@@ -244,15 +244,21 @@
     "\n",
     "Doordat meetwaarden kunnen fluctueren, geeft het gemiddelde van een serie herhaalde metingen ($x_i$) de best mogelijke benadering van de werkelijke waarde. De gemiddelde waarde bereken je op basis van de serie herhaalde metingen:\n",
     "\n",
-    "$$\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i$$ (eq:gem)\n",
+    "$$\n",
+    "\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
+    "$$ (eq:gem)\n",
     "\n",
     "Uiteraard is een herhaalde meting alleen zinnig wanneer je instrument nauwkeurig genoeg is om variaties te tonen. In de serie metingen zit een mate van spreiding: De metingen verschillen van elkaar. De standaard deviatie is een maat voor die spreiding:\n",
     "\n",
-    "$$\\sigma(x) = \\sqrt{\\frac{\\sum_{i=1}^N (x_i-\\overline{x})^2}{N-1}}$$ (eq:stdev)\n",
+    "$$\n",
+    "\\sigma(x) = \\sqrt{\\frac{\\sum_{i=1}^N (x_i-\\overline{x})^2}{N-1}}\n",
+    "$$ (eq:stdev)\n",
     "\n",
     "Alhoewel het gemiddelde en de standaard deviatie beter gedefinieerd worden met meer metingen, neemt de standaard deviatie niet af in waarde, zie {numref}`Figuur {number} <fig:MO:noisegen>`. De spreiding zelf is dan ook geen goede maat voor de onzekerheid in je gemiddelde waarde. De onzekerheid in je gemiddelde wordt gegeven door:\n",
     "\n",
-    "$$u(x) = \\frac{\\sigma(x)}{\\sqrt{N}}$$ (eq:unc)\n",
+    "$$\n",
+    "u(x) = \\frac{\\sigma(x)}{\\sqrt{N}}\n",
+    "$$ (eq:unc)\n",
     "\n",
     "Een belangrijk inzicht is dat de meetonzekerheid afneemt met de wortel van het aantal metingen. Om de meetonzekerheid op basis van meerdere metingen 10x zo klein te krijgen, moet je 100x zoveel herhaalde metingen uitvoeren. Het optimum van het aantal herhaalde metingen hangt dan ook af van (1) de nauwkeurigheid die je wilt hebben, en (2) de tijd en geld die je hebt om die nauwkeurigheid te verkrijgen.\n",
     "\n",
@@ -331,15 +337,21 @@
     "### Gewogen gemiddelde\n",
     "Het kan voorkomen dat niet alle herhaalde metingen even betrouwbaar zijn. Als meting 1 twee keer zo kleine onzekerheid heeft als meting 2, dan lijkt het logisch dat het gemiddelde berekend wordt door $\\frac{2 \\cdot x_1 + 1 \\cdot x_2}{3}$. We spreken dan over een gewogen gemiddelde. De vraag is dan natuurlijk hoe je aan de uitspraak komt over de betrouwbaarheid en hoe we daarmee aan onze weegfactor komen. Gelukkig hebben we daar net een maat voor gevonden, nl. de meetonzekerheid. De weegfactor wordt gedefinieerd door:\n",
     "\n",
-    "$$w_i = \\frac{1}{u(x_i)^2}$$ (eq:weegfactor)\n",
+    "$$\n",
+    "w_i = \\frac{1}{u(x_i)^2}\n",
+    "$$ (eq:weegfactor)\n",
     "\n",
     "Het gewogen gemiddelde is daarmee:\n",
     "\n",
-    "$$\\overline{x} = \\frac{w_1 x_1 + w_2 x_2 + w_3 x_3 + ... + w_n x_n}{w_1 + w_2 + w_3 + ... + w_n} = \\frac{\\sum_{i=1}^{N} w_i x_i}{\\sum_{i=1}^{N} w_i}.$$ (eq:gewogengemiddelde)\n",
+    "$$\n",
+    "\\overline{x} = \\frac{w_1 x_1 + w_2 x_2 + w_3 x_3 + ... + w_n x_n}{w_1 + w_2 + w_3 + ... + w_n} = \\frac{\\sum_{i=1}^{N} w_i x_i}{\\sum_{i=1}^{N} w_i}.\n",
+    "$$ (eq:gewogengemiddelde)\n",
     "\n",
     "met een bijbehorende onzekerheid van:\n",
     "\n",
-    "$$u(x) = \\sqrt{\\frac{1}{\\sum_i^N{w_i}}}$$ (eq:unc_gewogengemiddelde)\n",
+    "$$\n",
+    "u(x) = \\sqrt{\\frac{1}{\\sum_i^N{w_i}}}\n",
+    "$$ (eq:unc_gewogengemiddelde)\n",
     "\n",
     "Merk op dat de bovenstaande formule wordt gereduceerd tot het *normale* gemiddelde als alle weegfactoren $w_i$ gelijk zijn aan 1.\n",
     "\n",
@@ -374,20 +386,26 @@
     "\n",
     "Zoals aangegeven zit er spreiding in herhaalde metingen. De fysische meting $M$ kunnen we zien als de optelsom van de fysische waarde $G$ en ruis $s$:\n",
     "\n",
-    "$$M = G + s$$ (eq:MGs)\n",
+    "$$\n",
+    "M = G + s\n",
+    "$$ (eq:MGs)\n",
     "\n",
     "Ruis is hier ruim gedefinieerd, we verstaan er hier even alle mogelijke fouten onder. Onze interesse gaat met name uit naar willekeurige fouten. Deze zijn *normaal* verdeeld.\n",
     "\n",
     "### Normale verdeling\n",
     "Wanneer we te maken hebben met willekeurige ruis, dan kan de kans dat een waarde optreedt beschreven worden aan de hand van een normale (Gaussische) verdeling:\n",
     "\n",
-    "$$ P(x) = \\frac{1}{{\\sigma \\sqrt{2\\pi}}}e^{\\frac{{-(x - \\mu)^2}}{{2\\sigma^2}}} $$ (eq:Gauss)\n",
+    "$$\n",
+    "P(x) = \\frac{1}{{\\sigma \\sqrt{2\\pi}}}e^{\\frac{{-(x - \\mu)^2}}{{2\\sigma^2}}} \n",
+    "$$ (eq:Gauss)\n",
     "\n",
     "hierin is $P(x)$ de kansdichtheidsfunctie, met $\\mu$ het gemiddelde waarde van de ruis en $\\sigma$ de standaard deviatie.\n",
     "\n",
     "Een voorbeeld van een ruis signaal is weergegeven in {numref}`Figuur {number} <fig:MO:noise>` (de bijbehorende code is in een cel daaronder getoond). Het gemiddelde van deze waarden is 0. Het herhalen van metingen zorgt er dus voor dat de invloed van de ruis beperkt wordt omdat de gemiddelde bijdrage 0 is:\n",
     "\n",
-    "$$\\overline{M} = \\frac{\\sum_{i=1}^{N} (G + s)}{N} = \\frac{\\sum_{i=1}^{N} G + \\sum_{i=1}^{N} s}{N} = \\frac{\\sum_{i=1}^{N} G}{N} = \\overline{G}$$ (eq:MisG)\n",
+    "$$\n",
+    "\\overline{M} = \\frac{\\sum_{i=1}^{N} (G + s)}{N} = \\frac{\\sum_{i=1}^{N} G + \\sum_{i=1}^{N} s}{N} = \\frac{\\sum_{i=1}^{N} G}{N} = \\overline{G}\n",
+    "$$ (eq:MisG)\n",
     "\n",
     "\n",
     "\n",
@@ -469,7 +487,9 @@
     "\n",
     "De kans op $k$ gebeurtenissen binnen een bepaalde tijd met een gemiddelde van $\\lambda$ wordt gegeven door:\n",
     "\n",
-    "$$ P(X = k) = \\frac{\\lambda^k e^{-\\lambda}}{k!}. $$ (eq:Poisson)\n",
+    "$$\n",
+    "P(X = k) = \\frac{\\lambda^k e^{-\\lambda}}{k!}. \n",
+    "$$ (eq:Poisson)\n",
     "\n",
     "De standaardafwijking in een Poissonverdeling is gelijk aan de wortel van het gemiddelde ($\\sigma = \\sqrt{\\lambda}$).\n",
     "\n",
@@ -508,17 +528,23 @@
     "\n",
     "De verwachtingswaarde is eenvoudig uit te rekenen en wordt gegeven door: \n",
     "\n",
-    "$$ \\mu = \\frac{a+b}{2} $$ (eq:uni_gem)\n",
+    "$$\n",
+    "\\mu = \\frac{a+b}{2} \n",
+    "$$ (eq:uni_gem)\n",
     "\n",
     "en de standaard deviatie: \n",
     "\n",
-    "$$ \\sigma = \\sqrt{\\frac{(b-a)^2}{12}} $$ (eq:uni_std)\n",
+    "$$\n",
+    "\\sigma = \\sqrt{\\frac{(b-a)^2}{12}} \n",
+    "$$ (eq:uni_std)\n",
     "\n",
     "\n",
     "#### Monte Carlo simulatie\n",
     "Zo'n uniforme verdeling is handig bij bijvoorbeeld Monte Carlo simulaties. In zo'n simulatie wordt een groot aantal random punten aangemaakt en vervolgens wordt onderzocht waar die punten terecht komen. Voor een niet analytische oplosbare integraal kun je zo alsnog het oppervlak uitrekenen, nl:\n",
     "\n",
-    "$$ \\int_{a}^{b} f(x) dx = \\frac{N}{N_{totaal}} \\cdot (b-a) \\cdot (y_{max} - y_{min}) $$ (eq:unif)\n",
+    "$$\n",
+    "\\int_{a}^{b} f(x) dx = \\frac{N}{N_{totaal}} \\cdot (b-a) \\cdot (y_{max} - y_{min}) \n",
+    "$$ (eq:unif)\n",
     "\n",
     "Hierin zijn $y_{min}$ en $y_{max}$ de verticale grenzen die je kiest voor het maken van je random punten. Die moeten natuurlijk wel de gehele grafiek omvatten!\n",
     "\n",
@@ -538,11 +564,15 @@
     "\n",
     "Verder uitgewerkt houdt dit in dat je eerst het gemiddelde en de standaardafwijking uitrekent van je data, *inclusief* het verdachte punt. Vervolgens mag je een punt achterwege laten als het voldoet aan de volgende ongelijkheid: \n",
     "\n",
-    "$$ N\\cdot P_{out} < 0.5 $$ (eq:criterium)\n",
+    "$$\n",
+    "N\\cdot P_{out} < 0.5 \n",
+    "$$ (eq:criterium)\n",
     "\n",
     "waar\n",
     "\n",
-    "$$P_{out}=2Erf(x_{out},\\overline{x},\\sigma)$$ (eq:chauvenet)\n",
+    "$$\n",
+    "P_{out}=2Erf(x_{out},\\overline{x},\\sigma)\n",
+    "$$ (eq:chauvenet)\n",
     "\n",
     "erf is hier de errorfunctie, de integraal van de normale verdeling. De uitkomst van deze integraal is niet algebraïsch uit te rekenen. Op <https://www.danielsoper.com/statcalc/calculator.aspx?id=53> kun je de waarde voor de errorfunctie berekenen. Hieronder werken we uit hoe dat gaat in Python.\n",
     "\n",
@@ -714,11 +744,15 @@
     "\n",
     "Bij de functional approach kijk je naar het verschil als je de functie evalueert in het punt dat één onzekerheid van je meetpunt af ligt. In formulevorm wordt het dan:\n",
     "\n",
-    "$$u(Z) = \\frac{Z(\\overline{x}+u(x)) - Z(\\overline{x} - u(x))}{2}$$ (eq:func)\n",
+    "$$\n",
+    "u(Z) = \\frac{Z(\\overline{x}+u(x)) - Z(\\overline{x} - u(x))}{2}\n",
+    "$$ (eq:func)\n",
     "\n",
     "In veel gevallen is er sprake van symmetrie waardoor bovenstaande vergelijking ook opgevat kan worden als:\n",
     "\n",
-    "$$u(Z) = Z(\\overline{x}+u(x)) - Z(\\overline{x})$$ (eq:func_eenvoudig)\n",
+    "$$\n",
+    "u(Z) = Z(\\overline{x}+u(x)) - Z(\\overline{x})\n",
+    "$$ (eq:func_eenvoudig)\n",
     "\n",
     "\n",
     "```{admonition} Voorbeeld: \n",
@@ -763,7 +797,9 @@
     "### Calculus approach\n",
     "Bij de calculus methode gebruik je partiële afgeleides om het effect van een fout te lineariseren:\n",
     "\n",
-    "$$u(Z) = |\\frac{\\partial Z}{\\partial x}|u(x)$$ (eq:calc)\n",
+    "$$\n",
+    "u(Z) = |\\frac{\\partial Z}{\\partial x}|u(x)\n",
+    "$$ (eq:calc)\n",
     "\n",
     "Een gevolg van het lineair benaderen van de fout is dat deze methode minder nauwkeurig wordt naarmate de fout groter wordt of de functie sterk niet-linear gedrag vertoont.\n",
     "\n",
@@ -787,7 +823,9 @@
     "### Meerdere variabelen\n",
     "Als je resultaat een functie van meerdere onafhankelijke variabelen is, tel je de fouten kwadratisch op:\n",
     "\n",
-    "$$u(f(x_1,x_2,\\dotsc,x_n))^2 = \\sum_{i=1}^n \\left(\\frac{\\partial f(\\vec{x})}{\\partial x_i}u(x_i)\\right)^2$$ (eq:err_prop)\n",
+    "$$\n",
+    "u(f(x_1,x_2,\\dotsc,x_n))^2 = \\sum_{i=1}^n \\left(\\frac{\\partial f(\\vec{x})}{\\partial x_i}u(x_i)\\right)^2\n",
+    "$$ (eq:err_prop)\n",
     "\n",
     "Met de calculus methode is af te leiden dat de onzekerheid $u(f)$ voor een functie $f(y,x)=cy^nx^m$ geldt:\n",
     "\n",
@@ -989,17 +1027,23 @@
     "\n",
     "Fitten is een procedure waar wordt geprobeerd om een mathematisch verband te vinden in een aantal (meet)punten. We zijn dan op zoek naar een verband $F(x)$ die de meetpunten $M(x)$ beschrijft, zodanig dat:\n",
     "\n",
-    "$$F(x) - M(x)\\approx 0$$ (eq:resid)\n",
+    "$$\n",
+    "F(x) - M(x)\\approx 0\n",
+    "$$ (eq:resid)\n",
     "\n",
     "Eerst is het nodig om een type verband te kiezen. Voorbeelden zijn een lineaire fit, een polynoom, sinus, etc. In de fitprocedure zelf worden de parameters van dit verband zo gekozen, dat ze het beste overeenkomen met de data. Als een 2$^e$ orde polynoom wordt gefit bijvoorbeeld, zoek je welke combinatie van $a$, $b$, en $c$ ervoor zorgen dat de curve $a + bx + cx^2$ zo goed mogelijk op je meetpunten ligt.\n",
     "\n",
     "Een veelgebruikte methode om de *goedheid* van een fit te bepalen is de *least-squares* methode. Hierin wordt de som van de gekwadrateerde afstand van de meetpunten tot de fit geminimaliseerd. Daartoe definiëren we eerst de afstand tussen de meetpunt en de fit:\n",
     "\n",
-    "$$R_i = M_i - F_i$$ (eq:resid2)\n",
+    "$$\n",
+    "R_i = M_i - F_i\n",
+    "$$ (eq:resid2)\n",
     "\n",
     "Deze afstand wordt ook wel het residu genoemd, hier gaan we later ook dieper op in. De totale som van de absolute afstanden moet zo klein mogelijk worden:\n",
     "\n",
-    "$$\\chi^2=\\sum R_i^2$$ (eq:chi2a)\n",
+    "$$\n",
+    "\\chi^2=\\sum R_i^2\n",
+    "$$ (eq:chi2a)\n",
     "\n",
     "```{figure} Figures/least_squar_fit.png\n",
     "---\n",
@@ -1020,7 +1064,9 @@
     "\n",
     "Voor een gewogen fit wordt er gekeken naar de kleinste waarde voor $\\chi^2$ waarbij de onzekerheid meegewogen wordt:\n",
     "\n",
-    "$$\\chi^2 = \\sum \\frac{(M_i-F_i)^2 }{u(M_i)^2} $$ (eq:chi2)\n",
+    "$$\n",
+    "\\chi^2 = \\sum \\frac{(M_i-F_i)^2 }{u(M_i)^2} \n",
+    "$$ (eq:chi2)\n",
     "\n",
     "\n",
     "### Andere fit\n",
@@ -1053,7 +1099,9 @@
     "\n",
     "In een van de eerdere  secties is gesproken dat een fysische meting ($M(x)$) beschreven kan worden als de optelsom van de fysische waarde ($G(x)$) + ruis ($s$). Een functiefit ($F(x)$) gebeurt op basis van de metingen. Om te controleren dat we een goede fit te pakken hebben, moeten we nog naar de ruis kijken. Deze zouden we krijgen wanneer we de fitfunctie aftrekken van de meting: \n",
     "\n",
-    "$$ R = M(x) - F(x) \\stackrel{?}{=} s $$ (eq:residuals)\n",
+    "$$\n",
+    "R = M(x) - F(x) \\stackrel{?}{=} s \n",
+    "$$ (eq:residuals)\n",
     "\n",
     "De eerste analyse gebeurt door de ruis $s$ als functie van de onafhankelijke grootheid $x$ te plotten. Als daar een patroon in zit, bijvoorbeeld stijgende lijn, een sinus-vormig signaal, of alle ruispunten boven de 0, zie {numref}`Figuur {number} <fig:MO:three_graphs>`, dan is er grote kans dat er een betere functie $F(x)$ te vinden is die de fysische waarde $G(x)$ beschrijft.\n",
     "\n",
@@ -1104,7 +1152,9 @@
     "Stel dat we twee waarden $a$ en $b$ elk met hun eigen onzekerheid $u(a)$ en $u(b)$ willen vergelijken. Dan willen we eerst kijken naar het\n",
     "verschil tussen deze twee waarden: $v = a- b$. Op basis van de calculus approach wordt de onzekerheid in $v$ gegeven door $u(v) = \\sqrt{u(a)^2 + u(b)^2}$. De afspraak is nu dat twee waarden strijdig met elkaar zijn (in wetenschappelijke zin onvoldoende met elkaar overeenkomen) als geldt:\n",
     "\n",
-    "$$\\lvert v \\rvert = \\lvert a - b \\rvert > 2\\sqrt{u(a)^2 + u(b)^2} = 2u(v)$$ (eq:agreement)\n",
+    "$$\n",
+    "\\lvert v \\rvert = \\lvert a - b \\rvert > 2\\sqrt{u(a)^2 + u(b)^2} = 2u(v)\n",
+    "$$ (eq:agreement)\n",
     "\n",
     "Voor de bepaling van natuurkundige constanten, is de onzekerheid vaak zo klein dat deze ten opzichte van de andere onzekerheid te verwaarlozen is. Let op! Je kunt beargumenteren dat als je meetonzekerheid maar groot genoeg is, de waarden nooit strijdig zullen zijn. Maar wanneer de onzekerheid relatief groot is ten opzichte van de bepaalde waarde, dan heeft de gevonden waarden ook weinig wetenschappelijke waarde.\n",
     "\n",
