--- a/book/Course files/Notebook 6/NB6_ex.ipynb
+++ b/book/Course files/Notebook 6/NB6_ex.ipynb
@@ -645,7 +645,7 @@
     "**`Exercise 6.10`** \\\n",
     "___Give the most important steps in your calculations.___\n",
     "\n",
-    "The value of a physical quantity $A$ is determined to be $A = 9.274 \\pm 0.005$. Calculate the value of the physical quantity $Z$ and its uncertainty $\\alpha_{Z}$ using the calculus approach and the functional approach, when $Z$ depends on $A$ as follows:\n",
+    "The value of a physical quantity $A$ is determined to be $A = 9.274 \\pm 0.005$. Calculate the value of the physical quantity $Z$ and its uncertainty $u(Z)$ using the calculus approach and the functional approach, when $Z$ depends on $A$ as follows:\n",
     "\n",
     "**(a)** $Z = \\sqrt{A}$\n",
     "\n",
