--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "In an experiment, 10 measurements were taken of the voltage over and current through a Si-diode. The results are displayed in the following table, together with their uncertainties:\n",
     "\n",
-    "| I (μA) | $\\alpha_I$ (μA)| V (mV)| $\\alpha_V$ (mV)| \n",
+    "| I (μA) | $u(I)$ (μA)| V (mV)| $u(V)$ (mV)| \n",
     "| ---   | ---     | ---   | --- |\n",
     "|3034 |4      | 670   | 4   |        \n",
     "|1494 |2      | 636   | 4   |       \n",
@@ -346,7 +346,7 @@
     "Because measured values can fluctuate, the average of a series of repeated measurements ($x_i$) provides the best possible approximation of the actual value. The average value is calculated based on the series of repeated measurements:\n",
     "\n",
     "$$\n",
-    "\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
+    "\\mu_x=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
     "$$ (eq:gem)\n",
     "\n",
     "Of course, a repeated measurement only makes sense if your instrument is accurate enough to show variations. There is a degree of dispersion in the series of measurements: the measurements differ from each other. The standard deviation is a measure of that dispersion:\n",
@@ -893,7 +893,7 @@
     "\n",
     "*Answer:*\n",
     "\n",
-    "First, we determine the mean value $\\mu(U)=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000 \\mathrm{V}$. \\\n",
+    "First, we determine the mean value $\\mu_U=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000 \\mathrm{V}$. \\\n",
     "Then we determine the standard deviation $\\sigma(U) = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^N (U_i-\\overline{U})^2} = 0.038078866 \\mathrm{V}$. \\\n",
     "Finally, we determine the uncertainty in the average value $u(U) = \\frac{\\sigma(U)} {\\sqrt{N}} = 0.017029386 \\mathrm{V}$.\n",
     "We have fewer than $10^3$ measurement points, so we round the uncertainty to 1 significant figure: $u(U) = 0.02 \\mathrm{V}$.\n",
