--- a/book/Course files/Notebook 6/Notebook MU.ipynb
+++ b/book/Course files/Notebook 6/Notebook MU.ipynb
@@ -245,7 +245,7 @@
     "Doordat meetwaarden kunnen fluctueren, geeft het gemiddelde van een serie herhaalde metingen ($x_i$) de best mogelijke benadering van de werkelijke waarde. De gemiddelde waarde bereken je op basis van de serie herhaalde metingen:\n",
     "\n",
     "$$\n",
-    "\\mu(x)=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
+    "\\mu_x=\\overline{x} = \\frac{x_1 + x_2 + x_3 + ... + x_n}{N} = \\frac{1}{N}\\sum_{i=1}^{N} x_i\n",
     "$$ (eq:gem)\n",
     "\n",
     "Uiteraard is een herhaalde meting alleen zinnig wanneer je instrument nauwkeurig genoeg is om variaties te tonen. In de serie metingen zit een mate van spreiding: De metingen verschillen van elkaar. De standaard deviatie is een maat voor die spreiding:\n",
@@ -688,7 +688,7 @@
     "\n",
     "*Antwoord:*\n",
     "\n",
-    "Eerst bepalen we de gemiddelde waarde $\\mu(U)=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000$ V. \\\n",
+    "Eerst bepalen we de gemiddelde waarde $\\mu_U=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000$ V. \\\n",
     "Dan bepalen we de standaard deviatie $\\sigma(U) = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^N (U_i-\\overline{U})^2} = 0.038078866$ V.\\\n",
     "Als laatste bepalen we de onzekerheid in de gemiddelde waarde $u(U) = \\frac{\\sigma(U)}{\\sqrt{N}} = 0.017029386$ V.\\\n",
     "We hebben minder dan $10^3$ meetpunten, dus de onzekerheid ronden we af op 1 decimaal: $u(U) = 0.02$ V.\\\n",
