--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -704,7 +704,7 @@
     "```\n",
     "````\n",
     "\n",
-    "Both the shape and the function are somewhat similar to those of the Gaussian distribution. However, there are clear differences, particularly for small values of $\\lambda$. Furthermore, the number of events is always greater than 0, whereas in a Gaussian distribution, the expected value can also be less than 0.\n",
+    "Both the shape and the function are somewhat similar to those of the Gaussian distribution. However, there are clear differences, particularly for small values of $\\lambda$. Furthermore, the number of events is always at least 0, whereas in a Gaussian distribution, the expected value can also be less than 0.\n",
     "\n",
     "### Uniform distribution\n",
     "When you roll a die, the probability of rolling a 1 is the same as rolling a 6. In other words, the probability for any random number is uniformly (discreetly) distributed. Now suppose we are dealing with a continuous, uniform probability distribution, then the probability density function applies:\n",
