--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -781,7 +781,7 @@
     ":open:\n",
     ":class: dropdown\n",
     ":label: Outlier\n",
-    "Which measurement from series 1b is suspicious? Use Chauvenet's criterion to see if you can exclude this measurement.\n",
+    "Which measurement from exercise 3 series 2 is suspicious? Use Chauvenet's criterion to see if you can exclude this measurement.\n",
     "```\n",
     "\n",
     "````{solution} Outlier\n",
