Update Notebook 6 Measurement uncertainty.ipynb

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -769,7 +769,7 @@
     "where\n",
     "\n",
     "$$\n",
-    "P_{out}=2Erf(x_{out},\\overline{x},\\sigma)\n",
+    "P_{out}=2\\text{Erf}(x_{out},\\overline{x},\\sigma)\n",
     "$$ (eq:chauvenet)\n",
     "\n",
     "Here, erf is the error function, the integral of the normal distribution. The result of this integral cannot be calculated algebraically. You can calculate the value for the error function at <https://www.danielsoper.com/statcalc/calculator.aspx?id=53>. Below, we explain how to do this in Python.\n",
