--- a/book/Course files/Notebook 8/Notebook 8 Practice.ipynb
+++ b/book/Course files/Notebook 8/Notebook 8 Practice.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "b) Use this array make a new array consisting of the elements with value 20, 40, 60 and 80.\n",
     "\n",
-    "c) Make an array using the first array, running backwards from 1190 to 10 (include).\n",
+    "c) Make an array using the first array, running backwards from 1190 to 10 (inclusive).\n",
     "\n",
     "d) Calculate the average value of this array without using the numpy funcion average or mean.\n",
     "\n",
