--- a/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
+++ b/book/Course files/Notebook 1/Notebook 1 Python Basics.ipynb
@@ -1292,7 +1292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In some cases we want to add items to our array or combine different arrays into a single one. There are different ways to do that. To combine to numpy arrays, we can make use of the concatenate function. To add items at the end of our array, we can use the append function."
+    "In some cases we want to add items to our array or combine different arrays into a single one. There are different ways to do that. To combine two numpy arrays, we can make use of the concatenate function. To add items at the end of our array, we can use the append function."
    ]
   },
   {
